--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,28 @@
 user=Utilisateur
 user.email=Adresse mail
 user.lastName=Nom de famille
-user.firstName=Prénom(s)
+user.firstName=Prenom(s)
 user.birthday=Date de Naissance
+user.sexe=Sexe
+user.password=Mot de passe
+user.description=Description
+user.pseudo=Pseudonyme
+user.numeroTel=Telephone
+user.type=Role
+
+situation=Situation
+situation.orientation=Orientation
+situation.statutpro=Profession
+situation.statutperso=Situation familiale
+situation.nbrenfant=Nombre d'enfants
+situation.fumeur=Fumeur ?
+situation.alcool=Buveur ?
+
+adresse=Adresse
+adresse.codepostal=Code postal
+adresse.ville=Ville
+adresse.numero=Numero
+adresse.typerue=Type de rue
+adresse.nomrue=Nom de la rue
+adresse.complement=Complement
+adresse.prefixe=Prefixe
