--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -26,3 +26,13 @@ adresse.typerue=Type de rue
 adresse.nomrue=Nom de la rue
 adresse.complement=Complement
 adresse.prefixe=Prefixe
+
+apparence=Apparence
+apparence.taille=Taille
+apparence.couleuryeux=Couleur des yeux
+apparence.origine=Origine
+apparence.couleurcheveux=Couleur des cheveux
+apparence.typecheveux=Type de cheveux
+apparence.masse=Poids
+
+
