--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -9,6 +9,7 @@ user.description=Description
 user.pseudo=Pseudonyme
 user.numeroTel=Telephone
 user.type=Role
+user.new=Nouvel utilisateur
 
 situation=Situation
 situation.orientation=Orientation
