--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,6 +10,8 @@ user.pseudo=Pseudonyme
 user.numeroTel=Telephone
 user.type=Role
 user.new=Nouvel utilisateur
+user.list=Liste des utilisateurs
+user.login=Connexion
 
 situation=Situation
 situation.orientation=Orientation
@@ -35,5 +37,3 @@ apparence.origine=Origine
 apparence.couleurcheveux=Couleur des cheveux
 apparence.typecheveux=Type de cheveux
 apparence.masse=Poids
-
-
