--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,3 +1,4 @@
+bonjour=Bonjour
 user=Utilisateur
 user.email=Adresse mail
 user.lastName=Nom de famille
@@ -12,6 +13,7 @@ user.type=Role
 user.new=Nouvel utilisateur
 user.list=Liste des utilisateurs
 user.login=Connexion
+user.logout=Deconnexion
 
 situation=Situation
 situation.orientation=Orientation
