--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -16,6 +16,7 @@ user.new=Nouvel utilisateur
 user.list=Liste des utilisateurs
 user.login=Connexion
 user.logout=Deconnexion
+user.profile=Profil de
 
 situation=Situation
 situation.orientation=Orientation
